--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "express": "^4.18.2",
     "firebase": "^9.19.1",
     "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": "18.15.0",
+    "npm": "9.6.3"
   }
 }
